# opt-problems

./: .gitignore  Demo-Solar-Plant-Problem.ipynb  Demo-Toy-1D-Problem.ipynb  Dockerfile  Review-Experiment-Results.ipynb  System-Identification-FOPDT.ipynb  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  solar_plant_rto_cas.ipynb  symbolic_algebra.ipynb
excel_tools/: opt_problems.py  run_excel_sheet_mac.py  run_excel_sheet_win.py
optimizers/: optimizers.py
problems/optprob/: plot_utils.py  problems.py
problems/solar_plant_rto/: Solar Plant Optimization of N-Pumps I-O 2025-08-29.xlsm  solar_plant_gen_rto.py  solar_plant_rto.py  solar_plant_rto_cas.ipynb  solar_plant_rto_excel.py
problems/sys_id_fopdt/: sys_id_fopdt.py
problems/toy_1d/: toy_1d_problem.py
results/: .gitignore
stages/: make_plots.py  run_optimizer.py  run_optimizers.py
test/: test_run_excel_sheet_mac.py  test_run_excel_sheet_win.py  test_solar_plant_rto.py
tests/: test_run_excel_sheet_mac.py  test_run_excel_sheet_win.py  test_solar_plant_gen_rto.py  test_solar_plant_rto.py
