[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opt-problems"
version = "0.1.0"
description = "Optimization problems and demonstrations"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "jupyter",
    "pyyaml",
    "tqdm",
    "scikit-optimize",
    "lpfgopt",
    "xlwings"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["problems*"]

[project.scripts]
problems = "problems.__main__:main"